fixed z-index on burger menu active

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -31,12 +31,12 @@
   justify-content: center;
 }
 
-.hamburger{
+.hamburger {
   cursor: pointer;
   font-size: 2.2rem;
 }
 
-.logo img{
+.logo img {
   width: 100px;
 }
 
@@ -105,7 +105,7 @@
   width: 35px;
   height: 20px;
   top: 3.2rem;
-  left: 2rem
+  left: 2rem;
 }
 
 .bm-burger-bars {
@@ -121,7 +121,7 @@
   margin-top: 7px;
 }
 
-.bm-cross-button span{
+.bm-cross-button span {
   right: 15px !important;
 }
 
@@ -161,10 +161,7 @@
   .burger-menu-nav-items {
     display: none;
   }
-}
-
-@media screen and (min-width: 992px) {
-  .nav-top{
+  .nav-top {
     justify-content: space-between;
   }
   .nav-bar-menu {
@@ -194,10 +191,8 @@
     font-size: 1.5rem;
   }
 
-
   .sidebar-nav-logo {
     justify-content: flex-start;
-
   }
 
   .login-signUp {
